--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
    "homepage": "https://github.com/yoicalsin/classnames-fast#readme",
    "devDependencies": {
       "nodemon": "^2.0.3",
+      "prettier-plugin-packagejson": "^2.2.3",
       "rimraf": "^3.0.2"
    }
 }
