--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
    "version": "1.0.0",
    "description": "A function that merges given class names, no matter their format. Filters out invalid class names as well.",
    "main": "index.js",
+   "type": "index.d.ts",
    "scripts": {
       "build": "yarn prebuild && tsc",
       "start": "node index.js",
@@ -31,5 +32,8 @@
       "nodemon": "^2.0.3",
       "prettier-plugin-packagejson": "^2.2.3",
       "rimraf": "^3.0.2"
+   },
+   "dependencies": {
+      "is-all-utils": "^1.0.3"
    }
 }
